# sgcc_electricity_feishu

./: .env.example  .gitignore  Dockerfile  Dockerfile.local  README.md  README_CN.md  docker-compose.yml  pyproject.toml  run_sef.sh
.github/workflows/: docker-publish.yml
src/python_cli_starter/: cli.py
src/sgcc_electricity_feishu/: cli.py  const.py  electricity_data.py  feishu_bitable.py  fields.json  login.py  onnx.py  records.json  sgcc_data.json  utils.py
tests/: test_main.py
