[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sgcc-electricity-feishu"
version = '1.0.0'
description = "国家电网飞书应用开发"
readme = "README.md"
license = "MIT"
keywords = []
authors = [
  { name = "lanseria", email = "zhangchao564265135@hotmail.com" },
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "python-dotenv>=1.1.0",
  "selenium>=4.31.0",
  "requests>=2.32.3",
  "schedule>=1.2.2",
  "Pillow>=11.1.0",
  "onnxruntime>=1.21.0",
  "numpy>=2.2.4",
  "lark-oapi>=1.4.13",
  "pytest>=7.0.0",
]

[project.scripts]
sef = "sgcc_electricity_feishu.main:app"

[tool.hatch.build.targets.wheel]
packages = ['src/sgcc_electricity_feishu']

[[tool.uv.index]]
url = 'https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple'
default = true

